--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.security.user.name=name
-spring.security.user.password=password
+#spring.security.user.name=name
+#spring.security.user.password=password
